Prevent wrapping group names in InferenceData HTML repr (#1407)
* Reset grid for group names

* Update changelog

--- a/arviz/static/css/style.css
+++ b/arviz/static/css/style.css
@@ -66,6 +66,10 @@ body.vscode-dark {
   grid-template-columns: 150px auto auto 1fr 20px 20px;
 }
 
+.xr-sections.group-sections {
+  grid-template-columns: auto;
+}
+
 .xr-section-item {
   display: contents;
 }
